--- a/src/EShop.UI/Views/Products/Details.cshtml
+++ b/src/EShop.UI/Views/Products/Details.cshtml
@@ -4,6 +4,7 @@
 }
 
 <div class="container-fluid">
+    <form action="/products/buyitem/@Model.ProductId" method="post">
     <div class="row">
         <div class="col-3">
             <img src="@Model.ImageUrl" class="img-fluid" alt="@Model.ProductName" />
@@ -11,13 +12,13 @@
         <div class="col-6">
             <h1>@Model.ProductName</h1>
             <p>Price: $@Model.Price.ToString("f2") + Free Shipping</p>
-            
+
             <p>@Model.ProductDescription</p>
 
         </div>
         <div class="col-3 buy-widget">
             <p class="price">$@Model.Price.ToString("f2")</p>
-            @if(Model.InStock)
+            @if (Model.InStock)
             {
                 <p class="stock in-stock">In Stock</p>
             }
@@ -26,8 +27,9 @@
                 <p class="stock out-of-stock">Out of Stock</p>
             }
             <p>
-                <button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                <input type="submit" class="btn btn-success" value="Buy Now" />
             </p>
         </div>
     </div>
+    </form>
 </div>
