--- a/src/EShop.UI/Views/Shared/Navigation.cshtml
+++ b/src/EShop.UI/Views/Shared/Navigation.cshtml
@@ -12,6 +12,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/products">Products</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/orders">My Orders</a>
+            </li>
         </ul>
     </div>
 </nav>
