tweak orders page ui.

--- a/src/EShop.UI/Views/Orders/Index.cshtml
+++ b/src/EShop.UI/Views/Orders/Index.cshtml
@@ -1,21 +1,55 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Orders";
 }
-<h2>Index</h2>
 
-<div class="container-fluid">
-    @foreach (var order in @Model.Orders)
-    {
-        <form action="/orders/cancelorder/@order.orderId" method="post">
-            <li>@order.orderId</li>
-            <li>@order.productId</li>
-            <li>@order.orderPlacedOn</li>
-            <li>@order.isOrderAccepted</li>
-            @if (!order.isOrderAccepted)
-            {
-                <li><input type="submit" class="btn btn-success" value="Cancel Order"/></li>
-            }
-        </form>
-    }
+<section class="jumbotron text-center">
+    <div class="container">
+        <h1 class="jumbotron-heading">Orders Placed</h1>
+    </div>
+</section>
+
+<div class="container mb-4">
+    <div class="row">
+        <div class="col-12">
+            <div class="table-responsive">
+                
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col"> </th>
+                                <th scope="col">Product</th>
+                                <th scope="col">Order#</th>
+                                <th scope="col" class="text-center">Order Placed</th>
+                                <th scope="col" class="text-right">Price</th>
+                                <th> </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var order in @Model.Orders)
+                                {
+                                 <form action="/orders/cancelorder/@order.orderId" method="post">
+                                    <tr>
+                                        <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
+                                        <td>Product Name Dada</td>
+                                        <td>@order.orderId</td>
+                                        <td>@order.orderPlacedOn</td>
+                                        <td class="text-right">124,90 €</td>
+                                        <td class="text-right">
+                                            @if (!order.isOrderAccepted)
+                                            {
+                                                <input type="submit" class="btn btn-danger" value="Cancel Order" />
+                                            }
+                                        </td>
+                                    </tr>
+                                </form>
+                                }
+                            </tbody>
+                        </table>
+            </div>
+        </div>
+
+        <p><a class="btn btn-primary" href="/products">Keep shopping</a></p>
+        
+    </div>
 </div>
