Added grid ui composition support
- Add framework support for grid composition, which includes new interfaces which enables loading data in a chain using events between the different view model composition classes.
- Tweaked some events / schema.
- Added more methods in the controller to give out data for an array of Ids.
- Added view model composition ui classes.

--- a/src/EShop.UI/Views/Orders/Index.cshtml
+++ b/src/EShop.UI/Views/Orders/Index.cshtml
@@ -26,20 +26,24 @@
                             </tr>
                             </thead>
                             <tbody>
-                                @foreach (var order in @Model.Orders)
+                                @foreach (dynamic order in @Model.Orders)
                                 {
                                  <form action="/orders/cancelorder/@order.orderId" method="post">
                                     <tr>
-                                        <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                                        <td>Product Name Dada</td>
+                                        <td style="width: 70px;height:100px"><img src="@order.imageUrl" style="max-height:100%; max-width:100%" /> </td>
+                                        <td>@order.name</td>
                                         <td>@order.orderId</td>
                                         <td>@order.orderPlacedOn</td>
-                                        <td class="text-right">124,90 €</td>
+                                        <td class="text-right">$@order.price</td>
                                         <td class="text-right">
-                                            @if (!order.isOrderAccepted)
-                                            {
-                                                <input type="submit" class="btn btn-danger" value="Cancel Order" />
-                                            }
+                                            @if (!order.isOrderAccepted && !order.isOrderCancelled)
+    {
+                                        <input type="submit" class="btn btn-danger" value="Cancel Order" />
+}
+                                            @if (order.isOrderCancelled)
+    {
+                                                <span class="label label-danger">Cancelled</span>
+}
                                         </td>
                                     </tr>
                                 </form>
