--- a/src/EShop.UI/Views/Products/BuyItem.cshtml
+++ b/src/EShop.UI/Views/Products/BuyItem.cshtml
@@ -1,9 +1,9 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Order Placed";
 }
 
 <h4>Your order has been placed.</h4>
 
-<p><a class="btn btn-primary" href="/products">Keep shopping</a></p>
-
+<p>
+    <a class="btn btn-primary" href="/products">Keep shopping</a>
+</p>
