--- a/src/Warehouse.Azure.UI/Views/Product/Restock.cshtml
+++ b/src/Warehouse.Azure.UI/Views/Product/Restock.cshtml
@@ -1,8 +1,8 @@
-﻿@model object
+﻿@model int
 
 @{
     ViewBag.Title = "Confirmation";
 }
 
-<h2>Item stock was updated.</h2>
-<a href="##" onClick="history.go(-1); return false;"> Return to stock manamgement page</a>
+<h2>Stock for item with ID: @Model was updated.</h2>
+<a href="javascript:void(0);" onclick="history.go(-1);">Return to stock manamgement page</a>
